# controllers/chatbot/request/chatbot_request.go
@@ -1,5 +1,5 @@
 package request
 
-type RequestBody struct {
+type ChatbotRequest struct {
 	Message string `json:"message" validate:"required"` // Ensure it's correctly marked as "message"
 }
