# docs/swagger.yaml
@@ -97,6 +97,14 @@ definitions:
     required:
     - name
     type: object
+  request.ChatbotRequest:
+    properties:
+      message:
+        description: Ensure it's correctly marked as "message"
+        type: string
+    required:
+    - message
+    type: object
   request.CommentRequest:
     description: CommentRequest is the request for the Comment endpoint
     properties:
@@ -631,6 +639,56 @@ paths:
       summary: Update category
       tags:
       - Category
+  /chatbot:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Chatbot Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.ChatbotRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Chatbot Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.BaseResponse'
+            - properties:
+                data:
+                  additionalProperties:
+                    type: string
+                  type: object
+              type: object
+        "400":
+          description: Invalid Request Body
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.BaseResponse'
+            - properties:
+                data:
+                  additionalProperties:
+                    type: string
+                  type: object
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/base.BaseResponse'
+            - properties:
+                data:
+                  additionalProperties:
+                    type: string
+                  type: object
+              type: object
+      summary: Generate Chatbot Response
+      tags:
+      - Chatbot
   /comments:
     post:
       consumes:
